# CRUDFASTAPI

./: pyproject.toml
migrations/: env.py
migrations/versions/: 4a9be67c60da_init.py
src/: __init__.py  config.py
src/book_app/: models.py  routes.py  schema.py  service.py
src/db/: main.py
src/users/: models.py  routers.py  schema.py  service.py  utils.py
